pages/styles/style.css
/* Set background */
html {
  background-color: white;
  width: 100%;
  font-family: Didot, serif;
}


/* styles for the body of the site */
body {
  width: 100%;
}

img {
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  height: auto;
}

/* styles for subheadline */
h1 {
  line-height:2;
}

h2 {
  color: white;
}

/* styles for headline 3 */
p {
    color: black;
}

ul {
  list-style-type: square;
  list-style-position: inside;
}

/* styles for paragraph */
h6 {
    color: gray;
    font-family: Didot, serif;
}

/* styles for background image */
.bg-image {
  display: block;
  opacity: 0.75;
  background-size: cover
}

/* styles for banner */
.bannertext {
  background-color: rgba(70,139,204, 0.88);
  color: white;
  border: 10px solid #f1f1f1;
  top: 50%;
  left: 50%;
  position: fixed;
  transform: translate(-50%, -50%);
  width: 600px;
  padding: 20px;
  overflow: auto;
}

/* paragraph content centered */
.content {
  max-width: 50%;
  margin: auto;
}

/* paragraph content centered */
.content2 {
  max-width: 800px;
  margin: auto;
}

/* Navbar links */
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: left;
  text-decoration: none;
  font-size: 17px;
  border-bottom: 3px solid transparent;
  position: relative;
  width: auto;
  z-index: 100;
  top: 50px;
  padding-left: 12px;
  padding-bottom: 10px;
  padding: 12px;
  margin-top: -45px;
}

.topnav a:hover {
  border-bottom: 3px solid gray;
}

.topnav a.active {
  border-bottom: 3px solid gray;
}

.topnavother a {
  float: left;
  color: #8797FF;
  text-align: left;
  text-decoration: none;
  font-size: 17px;
  border-bottom: 3px solid transparent;
  position: relative;
  width: auto;
  z-index: 100;
  top: 37px;
  padding-left: 12px;
  padding-bottom: 10px;
  padding: 12px;
  margin-top: -45px;
  clear: none;
}

.topnavother a:hover {
  border-bottom: 3px solid gray;
}

.topnavother a.active {
  border-bottom: 3px solid gray;
}

.iconDetails {
  float: left; 
  height:180px;
  width:180px;
  margin-left: -230px;
  padding: 1%;
  margin-top: -10px;
} 

.container2 {
  padding:1%;
  margin-top: 100px;
  margin-bottom: 15px;
}

/* paragraph content centered */
.footer {
  width: 100% !important;  
  max-width: 100% !important;
  min-width: 100% !important;
  text-align: center;
  background-color: #ddd !important; 
  opacity: .8;
  position: absolute;
  z-index:100;
  left: 0;
  height: 55px;
}


.column1 {
  float: left;
  width: 33.33%;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 10px;
  font-size: 20px;
}

.column2 {
  float: left;
  width: 33.33%;
  text-align: center;
  padding-bottom: 20px;
  font-size: 12px;
}

.row {
  max-width: 700px;
  margin: auto;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

